# shooty

./: .gitignore  README.md  main.py  pyproject.toml  shooty.py
core/: soldier.py
scripts/: black-files.py
